updated and revealed homework link for week 4 in index

--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -37,9 +37,9 @@
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/2.html#slide-142">- homework</a></span></h3>
 			<h3><a href="3.html">HTML Images, Links, </a>
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/3.html#slide-106">- homework</a></span></h3>
-			<!--<h3><a href="4.html">CSS Basics - Styling</a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/4.html#slide-115">- homework</a></span></h3>
-			<h3><a href="5.html">CSS Layout</a>
+			<h3><a href="4.html">CSS Basics - Styling</a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/4.html#slide-116">- homework</a></span></h3>
+			<!--<h3><a href="5.html">CSS Layout</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/5.html#slide-116">- homework</a></span></h3>
 			<h3><a href="6.html">UX/Info Arch></a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/6.html#slide-114">- homework</a></span></h3>
