updated outer to read top

--- a/webspring-2014-2/4.html
+++ b/webspring-2014-2/4.html
@@ -454,7 +454,7 @@ p {
 		<h3> Can “Cascade” styles with spaces between selectors</h3>
 			<ul>
 				<li>HTML<pre>&lt;nav id='top'&gt;&lt;p&gt; ... &lt;/p&gt;&lt;/nav&gt;</pre>
-			 		CSS<pre><em>#top p </em> { color:red; } /* only p's inside of outer */</pre>
+			 		CSS<pre><em>#top p </em> { color:red; } /* only p's inside of top */</pre>
 				</li>
 		 	</ul>
 	</li>
