update of week 5 slides...

--- a/webspring-2014-2/5.html
+++ b/webspring-2014-2/5.html
@@ -266,27 +266,6 @@ function shuffleHomework(amt) {
 </ul>
 </article>
 
-<article class='slide slide-list'>
-<h2>Box Model Exercise</h2>
-<textarea class='coder-editor coder-editor-split coder-editor-instant'  data-save='S2012-blog-post-chop'>
-<style>
-  #box1 { 
-    background-color:teal;
-  }
-
-  #box2 { 
-    background-color:orange;
-  }
-
-
-</style>
-
-<div id="box1">I'm a box</div>
-<div id="box2">I'm a box 2!</div>
-</textarea>
-</article> 
-
-
 <article class='slide slide-accent'>
 	<h1>How do you layout elements on the page?</h1>
 </article>
@@ -339,53 +318,6 @@ function shuffleHomework(amt) {
 <h3>navs are a great example of floating elements - we'll make this from a list</h3>
 <h3><img src="images/nav-floats.png"/></h3>
 </article>
-
-<article class='slide slide-list'>
-<h2>Float Exercise</h2>
-<textarea class='coder-editor coder-editor-split coder-editor-instant' >
-<style>
-
-
-</style>
-
-<nav>
-  <ul>
-    <li>home</li>
-    <li>about</li>
-    <li>shop</li>
-    <li>contact</li>
-  </ul>
-</nav>
-</textarea>
-<script type='coder-solution'>
-<style>
-  li {
-    list-style:none;
-    float:left;
-    margin:10px;
-    background-color:teal;
-    padding:7px 14px;
-    color:white;
-    text-transform:uppercase;
-    font-family:Helvetica;
-  }
-
-
-</style>
-
-<nav>
-  <ul>
-    <li>home</li>
-    <li>about</li>
-    <li>shop</li>
-    <li>contact</li>
-  </ul>
-</nav>
-</script>
-
-</article> 
-
-
 
 
 
@@ -470,6 +402,7 @@ function shuffleHomework(amt) {
 <h2>Positioning Exercise</h2>
 <h3>using position:relative and absolute let's try to make this</h3>
 <h3><img src="images/positioning-ex.gif"/></h3>
+<h3><a href="http://www.barelyfitz.com/screencast/html-training/css/positioning/">A nice little summary.</a>
 </article>
 
 
@@ -793,9 +726,6 @@ footer#site-footer {     clear:both; background-color:black;     color:white
 		</li>
 		<li class="slide">
 			<h3>Have to clear your floats, or use a clearfix.</h3>
-		</li>
-		<li class="slide">
-			<h3>Will affect your content centering margin.</h3>
 		</li>
 	</ul>
 </article>
