--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -39,9 +39,9 @@
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/3.html#slide-106">- homework</a></span></h3>
 			<h3><a href="4.html">CSS Basics - Styling</a>
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/4.html#slide-116">- homework</a></span></h3>
-			<!--<h3><a href="5.html">CSS Layout</a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/5.html#slide-116">- homework</a></span></h3>
-			<h3><a href="6.html">UX/Info Arch></a>
+			<h3><a href="5.html">CSS Layout</a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/5.html#slide-112">- homework</a></span></h3>
+			<!--<h3><a href="6.html">UX/Info Arch></a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/6.html#slide-114">- homework</a></span></h3>
 			<h3><a href="7.html">Grids &amp; Tools of the Trade</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/7.html#slide-180">- homework</a></span></h3>
