updated week 6 slides and added example wires and sitemap

--- a/webspring-2014-2/6.html
+++ b/webspring-2014-2/6.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>We LOVE the Web</title>
+	<title>What IS web design?</title>
 	<meta name="viewport" content="width=1024">
 	
 	<!-- Replace path with correct path to deck.core.css. -->
@@ -87,8 +87,7 @@
 <article class='slide slide-subhead'>
 <h1>Designing for Users</h1>
 <h2>Week 6</h2>
-<p>CDGD304 - Spring 2013<br/>
- <a href='http://marthar.github.com/webfall-2012/4.html'>http://marthar.github.com/webspring-2013/6.html</a></p>
+<p>CDGD304 - Spring 2014<br/>
 </article>
 	
 <article class='slide slide-list'>
@@ -98,13 +97,10 @@
 			<h3>Review Homework</h3>
 		</li>
 		<li class="slide">
-			<h3>Discuss Readings</h3>
-		</li>
-		<li class="slide">
 			<h3>Designing for Users</h3>
 		</li>
 		<li class="slide">
-			<h3>User Expectations/UX</h3>
+			<h3>User expectations</h3>
 		</li>
 		<li class="slide">
 			<h3>Wireframing</h3>
@@ -157,20 +153,22 @@ function shuffleHomework(amt) {
 	</script>
 	<a href='javascript:shuffleHomework(10);'>Shuffle</a>
 	<ul id='homework'>
-		<li><a href='http://carljbowman.github.com/homework/index.html'>Carl Bowman</a></li>
-		<li><a href='http://jlfarnham.github.com/homework/index.html'>Jules Farnham</a></li>
-		<li><a href='http://brendongouveia.github.com/homework/index.html'>Brendon Gouveia</a></li>
-		<li><a href='http://zkgray.github.com/homework/index.html'>Zoya Gray</a></li>
-		<li><a href='http://carsonhalstead.github.com/homework/index.html'>Carson Halstead</a></li>
-		<li><a href='http://leehouse.github.com/homework/index.html'>Lee House</a></li>
-		<li><a href='http://jhoustova.github.com/homework/index.html'>Jarmila Houstova</a></li>
-		<li><a href='http://mclauer.github.com/homework/index.html'>Maria Lauer</a></li>
-		<li><a href='http://caseymcgee.github.com/homework/index.html'>Casey McGee</a></li>
-		<li><a href='http://katherinemclean.github.com/homework/index.html'>Katherine McLean</a></li>
-		<li><a href='http://jrraichek.github.com/homework/index.html'>Jennifer Raichek</a></li>
-		<li><a href='http://chrisskinner.github.com/homework/index.html'>Christopher Skinner</a></li>
-		<li><a href='http://jenellevalencia.github.com/homework/index.html'>Jenelle Valencia</a></li>
-		<li><a href='http://youngshimgontijo.github.com/homework/index.html'>Youngshim Gontijo</a></li>
+		<li><a href='http://eabaahomc.github.io/homework/index.html'>Ewuradjoa Abaaho</a></li>
+		<li><a href='http://BethAlmeida.github.io/homework/index.html'>Beth Almeida</a></li>
+		<li><a href='http://zabarzin.github.io/homework/index.html'>Zahra Barzin</a></li>
+		<li><a href='http://cjbowers.github.io/homework/index.html'>Chris Bowers</a></li>
+		<li><a href='http://nikicor.github.io/homework/index.html'>Nikkie Corzo</a></li>
+		<li><a href='http://evaneagan.github.io/homework/index.html'>Evan Eagan</a></li>
+		<li><a href='http://mpedgar.github.io/homework/index.html'>Maggie Edgar</a></li>
+		<li><a href='http://skyerickson.github.io/homework/index.html'>Sky Erickson</a></li>
+		<li><a href='http://elharris.github.io/homework/index.html'>Liz Harris</a></li>
+		<li><a href='http://laramee321.github.io/homework/index.html'>Eoin Laramee</a></li>
+		<li><a href='http://mliriano.github.io/homework/index.html'>Michelle Liriano</a></li>
+		<li><a href='http://camuscanell.github.io/homework/index.html'>Craig Muscanell</a></li>
+		<li><a href='http://sapeckham.github.io/homework/index.html'>Sam Peckham</a></li>
+		<li><a href='http://jesspurdy.github.io/homework/index.html'>Jesseca Purdy</a></li>
+		<li><a href='http://nataliesocha.github.io/homework/index.html'>Natalie Socha</a></li>
+		<li><a href='http://maw11999.github.io/homework/index.html'>Morgan Wilson</a></li>
 	</ul>
 </article>
 
@@ -187,19 +185,17 @@ function shuffleHomework(amt) {
 		human activity; reflect or adapt to individual 
 		voices and content; and change gracefully over 
 		time while always retaining their identity.</p>
-	<p class="slide"><span class="callout"> -alistapart.com/articles/understandingwebdesign</span></p>
+	<p class="slide"><span class="callout"><a href="http://www.alistapart.com/articles/understandingwebdesign">http://www.alistapart.com/articles/understandingwebdesign</a></span></p>
 </article>
 
 <article class='slide slide-image'>
 <h1><img src="images/wikipedia.png" alt="logo" class='top-image'/>Wikipedia Says:</h1>
 <p class='slide'>
-Web Design is the skill of creating presentations of content (usually hypertext or hypermedia) that is delivered to an end-user through the World Wide Web, by way of a Web browser or other Web-enabled software like Internet television clients, microblogging clients and RSS readers.
+Web design encompasses many different skills and disciplines in the production and maintenance of websites. The different areas of web design include web graphic design; interface design; authoring, including standardized code and proprietary software; user experience design; and search engine optimization. Often many individuals will work in teams covering different aspects of the design process, although some designers will cover them all.[1] The term web design is normally used to describe the design process relating to the front-end (client side) design of a website including writing mark up. Web design partially overlaps web engineering in the broader scope of web development. Web designers are expected to have an awareness of usability and if their role involves creating mark up then they are also expected to be up to date with web accessibility guidelines.
+[But please note... "This article has multiple issues."]
 </p>
 </article>
 
-<article class='slide slide-accent'>
-	<h2>Web Design lets content do it's thing on on the web</h2>
-</article>
 				
 <article class="slide slide-list">
 	<h1>A Website is not..</h1>
@@ -210,17 +206,16 @@ Web Design is the skill of creating presentations of content (usually hypertext 
 
 
 <article class='slide slide-list'>
-<h1>What is good design?</h1>
-<h3 class='slide'>
-		Reminded of a famous Supreme Court Quote:<br/><br/>
-		I shall not today attempt further to deﬁne the kinds of material I understand to be embraced within that shorthand 
-		description; and perhaps I could never succeed in intelligibly doing so. <b>But I know it when I see it</b>, and the motion 
-picture involved in this case is not that.</h3>
+<h1>What is good &#8220;web&#8221; design?</h1>
+<h3 class='slide'>Useful, compelling, delightful, and many other potentially subjective adjectives.</h3>
 </article>
 
-<article class='slide slide-accent'>
-	<h2>...or I know it when I see it</h2>
-</article>	
+<article class='slide slide-list'>
+<h1>Let's think in terms of rhetorical strategy</h1>
+<h3 class='slide'>Audience / Purpose / Constraints <br>
+	or<br>
+	Audience / Content / Media</h3>
+</article>
 
 <article style='background-image:url(images/mac.jpg);' class='slide slide-background-content'>
 <h2>Know your audience...</h2>
@@ -274,18 +269,15 @@ picture involved in this case is not that.</h3>
 </ul>
 </article>
 
-<article class="slide slide-subhead">
-<h2><br/><br/>You are also designing for<br/> <em>2012 Web Surfers</em></h2>
-</article>
 
 <article class='slide slide-list'>
-	<h2>Think about who will use the website and their needs</h2>
+	<h2>Think about who will use the website and their needs.</h2>
 	<ul>
 		<li class='slide'>
 			<h3>I want to buy something</h3>
 		</li>
 		<li class='slide'>
-			<h3>Google sent me here</h3>
+			<h3>I want to learn something</h3>
 		</li>
 		<li class='slide'>
 			<h3>I just want your phone number</h3>
@@ -319,7 +311,7 @@ picture involved in this case is not that.</h3>
 </article>
 
 <article class='slide slide-accent'>
-<h1>Feed into<br/>User Expectations</h1>
+<h1>Users have certain<br/>Expectations of how a site will work.</h1>
 </article>
 
 <article class='slide slide-list'>
@@ -329,13 +321,10 @@ picture involved in this case is not that.</h3>
 		<h3>Underline is a link</h3>
 	</li>
 	<li class="slide">
-		<h3>@something</h3>
+		<h3>@something = twitter city, bro</h3>
 	</li>
 	<li class="slide">
 		<h3>name@something.com</h3>
-	</li>
-	<li class="slide">
-		<h3>google.com</h3>
 	</li>
 	<li class="slide">
 		<h3>Where is the login link?</h3>
@@ -354,6 +343,10 @@ picture involved in this case is not that.</h3>
 	</li>
 	<li class="slide">
 		<h3>Extra links - like “Privacy Policy”, “Terms of Use” are where?</h3>
+	</li>
+	<li class="slide">
+		<h3>Not to mention conventions on mobile for things like the hamburger button and swiping.
+		</h3>
 	</li>
 </ul>
 </article>
@@ -381,16 +374,23 @@ picture involved in this case is not that.</h3>
 </article>
 
 <article class='slide slide-accent'>
-<h1>Information Architecture</h1>
-<p class='slide'>is a big word...</p>
+<h1>Intentional application of conventions...</h1>
+<p class='slide'>Helps users focus on the content and not be distracted or confused.</p>
 </article>
+
+<article class='slide slide-accent'>
+<p>But conventions are meaningless without...</p>
+<h1 class='slide'>Information Architecture</h1>
+</article>
+
 
 <article style='background-image:url(images/ia.png);' class='slide slide-background-content'>
 <h2>What is IA?</h2>
 </article>
 
 <article class='slide slide-accent'>
-<h1>How about:<br/> have a plan</h1>
+<h1>Information Architecture</h1>
+<p class='slide'>Is tough to describe exactly. It's all about laying the plans for the organization of—and user interaction with—a website or interactive experience.</p>
 </article>
 
 <article class='slide slide-list'>
@@ -425,17 +425,11 @@ picture involved in this case is not that.</h3>
 <h2>Restaurants</h2>
 <ul>
 	<li><h3>They think: I want to show people how amazing the experience here is</h3></li>
-	<li><h3><a href='http://theoatmeal.com/comics/restaurant_website'>Actual Use Cases</a></h3></li>
+	<li><h3><a href='http://theoatmeal.com/comics/restaurant_website'>See: <em>Actual Use Cases</em></a></h3></li>
 
 </ul>
 </article>
 
-<article class='slide slide-accent'>
-<h1>Universities</h1>
-</article>
-
-<article style='background-image:url(http://imgs.xkcd.com/comics/university_website.png);' class='slide slide-background'>
-</article>
 
 <article class='slide slide-accent'>
 <h1>user stories</h1>
@@ -445,10 +439,13 @@ picture involved in this case is not that.</h3>
 <h2>User stories, think about:</h2>
 <ol>
 <li class="slide">
-	<h3>Who is visiting your site (give them a name)</h3>
+	<h3>Who is visiting your site?</h3>
 </li>
 <li class="slide">
-	<h3>Their goals and how they got to your site</h3>
+	<h3>What are their goals when they arrive at your site?</h3>
+</li>
+<li class="slide">
+	<h3>How did they get to your site in the first place?</h3>
 </li>
 <li class="slide">
 	<h3>How can you help them and keep them interested?</h3>
@@ -497,6 +494,9 @@ picture involved in this case is not that.</h3>
 		<li class="slide">
 			<h3>Help you create a better hierarchy</h3>
 		</li>	
+		<li class="slide">
+			<h3>What do sitemaps look like? <a href="images/rough_sitemap_v3.pdf">Here's one we made</a></h3>
+		</li>
 	</ul>		
 </article>
 
@@ -506,10 +506,6 @@ picture involved in this case is not that.</h3>
 </h3>
 </article>
 
-<article class='slide slide-accent'>
-	<h1><a href='http://webdesignledger.com/inspiration/18-great-examples-of-sketched-ui-wireframes-and-mockups'>Some Great Examples</a>
-	</h1>
-</article>	
 
 <article class='slide slide-list'>
 <h1>What is Wireframing?</h1>
@@ -528,6 +524,9 @@ picture involved in this case is not that.</h3>
 		</li>
 		<li class="slide">
 			<h3>Identify static and dynamically generated content areas</h3>
+		</li>
+		<li class="slide">
+			<h3>What do wires look like? Well... different people's wires look different, but generally they are b/w and do not indicate a "design" per se. <a href="images/winston_wires_v4.pdf">Here's an example</a></h3>
 		</li>	
 	</ul>		
 </article>
@@ -535,11 +534,23 @@ picture involved in this case is not that.</h3>
 <article class='slide slide-list'>
 <h2>Some tools</h2>
 <ul>
+	<li class='slide'><h3>InDesign or Illustrator</h3></li>
 	<li class='slide'><h3><a href='http://balsamiq.com/products/mockups'>Balsamiq</a></h3></li>
 	<li class='slide'><h3><a href='https://gomockingbird.com/'>Mockingbird</a></h3></li>
 	<li class='slide'><h3><a href='http://www.omnigroup.com/products/omnigraffle/'>Omnigrafﬂe</a></h3></li>
 	<li class='slide'><h3>Free: <a href='http://mashable.com/2010/07/15/wireframing-tools/'>Mashable Article</a></h3></li>
 	<li class='slide'><h3>Big piece of paper and sharpie</h3></li>
+</ul>
+</article>
+
+<article class='slide slide-list'>
+<h2>Some resources/articles</h2>
+<ul>
+	<li class='slide'><h3><a href='http://www.uxmatters.com/mt/archives/2007/11/the-five-competencies-of-user-experience-design.php'>The 5 competencies of UX design</a></h3></li>
+	<li class='slide'><h3><a href='http://www.uxmatters.com/mt/archives/2011/09/the-value-of-customer-journey-maps-a-ux-designers-personal-journey.php'>The value of customer journey maps</a></h3></li>
+	<li class='slide'><h3><a href='http://uxmag.com/articles/personas-the-foundation-of-a-great-user-experience'>Personas: the foundation of a great user experience</a></h3></li>
+	<li class='slide'><h3><a href='http://uxdesign.smashingmagazine.com/2010/10/05/what-is-user-experience-design-overview-tools-and-resources/'>What is user experience design?</a></h3></li>
+	<li class='slide'><h3><a href="http://www.adaptivepath.com/ideas/the-anatomy-of-an-experience-map/">The anatomy of an experience map, from Adaptive Path</a></h3></li>
 </ul>
 </article>
 
@@ -552,10 +563,10 @@ picture involved in this case is not that.</h3>
 			<li><h3><a href='http://www.alistapart.com/articles/designingforflow/'>Designing For Flow</a></h3>
 			</li>
 		</ul>
-	<h3 class="callout">Sketching User Stories</h3>
+	<h3 class="callout">Sketching user stories and making wireframes</h3>
        	<ul>
 			<li>
-				<h3>2 Sites, 3 user stories per site, 2 page sketches per site</h3>
+				<h3>3 user stories, 3 page types</h3>
 			</li>
 			<li>
 				<h3>Include navigation, main page elements, content layout</h3>
@@ -564,12 +575,8 @@ picture involved in this case is not that.</h3>
 				<h3>Choose from</h3>
 				<ul>
 					<li>
-						<h3>Shop</h3>
-						<h3>Blog</h3>
-						<h3>Agency</h3>
-						<h3>Portfolio</h3>
-						<h3>Band Site</h3>
-						<h3>Restaurant</h3>
+						<h3>High-end flower shop</h3>
+						<h3>Bad-ass design studio/agency</h3>
 					</li>
 				</ul>
 			</li>
