updated homework on index

--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -41,9 +41,9 @@
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/4.html#slide-116">- homework</a></span></h3>
 			<h3><a href="5.html">CSS Layout</a>
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/5.html#slide-112">- homework</a></span></h3>
-			<!--<h3><a href="6.html">UX/Info Arch></a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/6.html#slide-114">- homework</a></span></h3>
-			<h3><a href="7.html">Grids &amp; Tools of the Trade</a>
+			<h3><a href="6.html">Designing for users AKA what IS web design?</a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/6.html#slide-122">- homework</a></span></h3>
+			<!--<h3><a href="7.html">Grids &amp; Tools of the Trade</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/7.html#slide-180">- homework</a></span></h3>
 			<h3><a href="8.html">Type on the Web</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/8.html#slide-165">- homework</a></span></h3>
