updates to week 6 slides

--- a/webspring-2014-2/6.html
+++ b/webspring-2014-2/6.html
@@ -460,14 +460,8 @@ Web design encompasses many different skills and disciplines in the production a
 
 
 <article class='slide slide-subhead'>
-<h1>Exercise 2: Bed and Breakfast</h1>
-<h3>Pair up and write 3 user stories for visitors to a bed and breakfast website</h3>
-</article>
-
-
-<article class='slide slide-subhead'>
-<h1>Exercise 3: Lawyer website</h1>
-<h3>Pair up and write 3 user stories for visitors to a personal injury laywer's website</h3>
+<h1>Exercise 2: Small, high-end, luxury yacht cruise operator</h1>
+<h3>Pair up and write 3 user stories for visitors to a small, high-end, luxury yacht cruise operator's website</h3>
 </article>
 
 
