oopsies - deleted one too many slides

--- a/webspring-2014-2/7.html
+++ b/webspring-2014-2/7.html
@@ -663,6 +663,10 @@ function shuffleHomework(amt) {
 		<img src='images/five.png'/>
 </article>
 
+<article class='slide slide-image'>
+		<img src='images/fivegrid.png'/>
+</article>
+
 
 <article class='slide slide-list'>
 <h2>Just a couple out there...</h2>
