one lil tweak to week 8

--- a/webspring-2014-2/8.html
+++ b/webspring-2014-2/8.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>A Web of Typographic Love</title>
+	<title>Typography on the web</title>
 	<meta name="viewport" content="width=1024">
 	
 	<!-- Replace path with correct path to deck.core.css. -->
@@ -87,7 +87,7 @@
 <article class='slide slide-subhead'>
 <h1>Typography &amp; the Web</h1>
 <h2>Week 8</h2>
-<p>CDGD304 - Spring 2013<br/>
+<p>CDGD304 - Spring 2014<br/>
 </p>
 </article>
 	
