--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -45,9 +45,9 @@
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/6.html#slide-121">- homework</a></span></h3>
 			<h3><a href="7.html">Grids &amp; Tools of the Trade</a>
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/7.html#slide-133">- homework</a></span></h3>
-			<!--<h3><a href="8.html">Type on the Web</a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/8.html#slide-165">- homework</a></span></h3>
-			<h3><a href="9.html">Responsive Design</a>
+			<h3><a href="8.html">Type on the Web</a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/8.html#slide-144">- homework</a></span></h3>
+			<!--<h3><a href="9.html">Responsive Design</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/9.html#slide-101">- homework</a></span></h3>
 			<h3><a href="10.html">jQuery - Oh Crap Programming!</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/10.html#slide-95">- homework</a></span></h3>
