Updated week 9 slides

--- a/webspring-2014-2/9.html
+++ b/webspring-2014-2/9.html
@@ -88,8 +88,8 @@
 <article class='slide slide-subhead'>
 <h1>Responsive Design</h1>
 <h2>Week 9</h2>
-<p>CDGD304 - Spring 2013<br/>
- <a href='http://marthar.github.com/webfall-2012/9.html'>http://marthar.github.com/webspring-2013/9.html</a></p>
+<p>CDGD304 - Spring 2014<br/>
+</p>
 </article>
 	
 <article class='slide slide-list'>
@@ -157,22 +157,21 @@ function shuffleHomework(amt) {
 	</script>
 	<a href='javascript:shuffleHomework(10);'>Shuffle</a>
 	<ul id='homework'>
-		<li><a href='http://carljbowman.github.com/homework/index.html'>Carl Bowman</a></li>
-		<li><a href='http://jlfarnham.github.com/homework/index.html'>Jules Farnham</a></li>
-		<li><a href='http://brendongouveia.github.com/homework/index.html'>Brendon Gouveia</a></li>
-		<li><a href='http://zkgray.github.com/homework/index.html'>Zoya Gray</a></li>
-		<li><a href='http://carsonhalstead.github.com/homework/index.html'>Carson Halstead</a></li>
-		<li><a href='http://leehouse.github.com/homework/index.html'>Lee House</a></li>
-		<li><a href='http://jhoustova.github.com/homework/index.html'>Jarmila Houstova</a></li>
-		<li><a href='http://mclauer.github.com/homework/index.html'>Maria Lauer</a></li>
-		<li><a href='http://caseymcgee.github.com/homework/index.html'>Casey McGee</a></li>
-		<li><a href='http://katherinemclean.github.com/homework/index.html'>Katherine McLean</a></li>
-		<li><a href='http://jrraichek.github.com/homework/index.html'>Jennifer Raichek</a></li>
-		<li><a href='http://chrisskinner.github.com/homework/index.html'>Christopher Skinner</a></li>
-		<li><a href='http://jenellevalencia.github.com/homework/index.html'>Jenelle Valencia</a></li>
-		<li><a href='http://youngshimgontijo.github.com/homework/index.html'>Youngshim Gontijo</a></li>
-		<li><a href='http://jaelee.github.com/homework/index.html'>Sukjae Lee</a></li>
-
+		<li><a href='http://eabaahomc.github.io/homework/index.html'>Ewuradjoa Abaaho</a></li>
+		<li><a href='http://BethAlmeida.github.io/homework/index.html'>Beth Almeida</a></li>
+		<li><a href='http://zabarzin.github.io/homework/index.html'>Zahra Barzin</a></li>
+		<li><a href='http://cjbowers.github.io/homework/index.html'>Chris Bowers</a></li>
+		<li><a href='http://nikicor.github.io/homework/index.html'>Nikkie Corzo</a></li>
+		<li><a href='http://evaneagan.github.io/homework/index.html'>Evan Eagan</a></li>
+		<li><a href='http://mpedgar.github.io/homework/index.html'>Maggie Edgar</a></li>
+		<li><a href='http://skyerickson.github.io/homework/index.html'>Sky Erickson</a></li>
+		<li><a href='http://elharris.github.io/homework/index.html'>Liz Harris</a></li>
+		<li><a href='http://laramee321.github.io/homework/index.html'>Eoin Laramee</a></li>
+		<li><a href='http://mliriano.github.io/homework/index.html'>Michelle Liriano</a></li>
+		<li><a href='http://camuscanell.github.io/homework/index.html'>Craig Muscanell</a></li>
+		<li><a href='http://jesspurdy.github.io/homework/index.html'>Jesseca Purdy</a></li>
+		<li><a href='http://nataliesocha.github.io/homework/index.html'>Natalie Socha</a></li>
+		<li><a href='http://maw11999.github.io/homework/index.html'>Morgan Wilson</a></li>
 	</ul>
 </article>
 
@@ -235,7 +234,7 @@ function shuffleHomework(amt) {
 		<h3>Must have buy-in from clients, designers, and developers</h3>
 	</li>
 	<li class="slide">
-		<h3>Relatively new, libraries and support still works-in-progress</h3>
+		<h3>We are still trying to figure out the best way to do it.</h3>
 	</li>
 </ul>
 </article>
@@ -251,9 +250,6 @@ function shuffleHomework(amt) {
 	</li>
 	<li class="slide">
 		<h3>Mobile support baked-in</h3>
-	</li>
-	<li class="slide">
-		<h3>True responsive design will display correctly on the iPad 23 in 2025.</h3>
 	</li>
 	<li class="slide">
 		<h3>Works regardless of device, orientation or resolution.</h3>
@@ -307,19 +303,19 @@ function shuffleHomework(amt) {
 </article>	
 
 <article class='slide slide-list'>
-<h2>Flexible/Fluid Grids</h2>
+<h2>Flexible/Fluid Grids (Layout)</h2>
 <ul>
 	<li class="slide">
-		<h3>Size everything in ems or percentages</h3>
+		<h3>Size everything in ems or percentages.</h3>
 	</li>
 	<li class="slide">
-		<h3>Fluid percentages for width</h3>
+		<h3>Fluid percentages for width.</h3>
 	</li>
 	<li class="slide">
 		<h3>Height needs to be set to auto.</h3>
 	</li>
 	<li class="slide">
-		<h3>Golden Formula: target ÷ context = result</h3>
+		<h3>Golden Formula: target ÷ context = result (this presumes you begin, to a certain degree, with a pixel-based design).</h3>
 	</li>
 </ul>
 </article>
@@ -738,7 +734,7 @@ function shuffleHomework(amt) {
 
 
 <article class='slide slide-list' >
-<h1>"Breakpoints"</h1>
+<h1>Breakpoints...</h1>
 <h2>When does your design break? How can you adjust your page to respond?</h2>
 </article>
 
@@ -784,28 +780,6 @@ function shuffleHomework(amt) {
 
 
 
-<article class='slide slide-subhead'>
-<h1>Setting the <a href='https://developer.mozilla.org/en/Mobile/Viewport_meta_tag'>Viewport</a></h1>
-</article>
-
-<article class='slide slide-list'>
-<h2>Examples</h2>
-<ul>
-	<li>
-          <a href="http://BostonGlobe.com">BostonGlobe.com</a> (<a href='http://slides.upstatement.com/boston-globe/'>Upstatement Presentation</a>)</li>
-	<li>
-		<a href="http://teegallery.com/">http://teegallery.com/</a></li>
-	<li>
-		<a href="http://www.html5gamedevelopment.org/">http://www.html5gamedevelopment.org/</a></li>
-</ul>
-</article>
-
-
-<article class='slide slide-subhead'>
-<h1>Where to use?</h1>
-<h2>Discussion..</h2>
-</article>
-
 
 <article class='slide slide-homework'>
 <h2>Homework</h2>
@@ -828,7 +802,7 @@ function shuffleHomework(amt) {
  			    </h3>
 			</li>
 			<li>
-	           <h3>Write and Validate the HTML for Homepage and 1 interior page of your final project 
+	           <h3>Write valid and semantically correct HTML for your website. This starts by having content. So, if you have not started the process yet, you will, of course, need content for your site. When you have some writing done, have someone proof it for you. Your designs and HTML for 3 pages should be finished by next week.
 	 		   </h3>
 			</li>
 		</ul>
