--- a/webspring-2014-2/10.html
+++ b/webspring-2014-2/10.html
@@ -173,27 +173,28 @@ function shuffleHomework(amt) {
 	</script>
 	<a href='javascript:shuffleHomework(10);'>Shuffle</a>
 	<ul id='homework'>
-		<li><a href='http://heathermendonca.github.com/homework/index.html'>heathermendonca</a></li>
-		<li><a href='http://jmfisherr.github.com/homework/index.html'>jmfisherr</a></li>
-		<li><a href='http://yeesusanna.github.com/homework/index.html'>yeesusanna</a></li>
-		<li><a href='http://krhogan.github.com/homework/index.html'>krhogan</a></li>
-		<li><a href='http://nopsketchbook.github.com/homework/index.html'>nopsketchbook</a></li>
-		<li><a href='http://lkfenton.github.com/homework/index.html'>lkfenton</a></li>
-		<li><a href='http://bejohnston.github.com/homework/index.html'>bejohnston</a></li>
-		<li><a href='http://annacolleenc.github.com/homework/homework.html'>annacolleenc</a></li>
-		<li><a href='http://hisakanishibayashi.github.com/homework/index.html'>hisakanishibayashi</a></li>
-		<li><a href='http://marthabarry.github.com/homework/index.html'>marthabarry</a></li>
-		<li><a href='http://trwhite.github.com/homework/index.html'>trwhite</a></li>
-		<li><a href='http://themusicmaker.github.com/homework/index.html'>themusicmaker</a></li>
-		<li><a href='http://ktengprawat.github.com/homework/index.html'>ktengprawat</a></li>
-		<li><a href='http://digihex.github.com/homework/index.html'>digihex</a></li>
+		<li><a href='http://eabaahomc.github.io/homework/index.html'>Ewuradjoa Abaaho</a></li>
+		<li><a href='http://BethAlmeida.github.io/homework/index.html'>Beth Almeida</a></li>
+		<li><a href='http://zabarzin.github.io/homework/index.html'>Zahra Barzin</a></li>
+		<li><a href='http://cjbowers.github.io/homework/index.html'>Chris Bowers</a></li>
+		<li><a href='http://nikicor.github.io/homework/index.html'>Nikkie Corzo</a></li>
+		<li><a href='http://evaneagan.github.io/homework/index.html'>Evan Eagan</a></li>
+		<li><a href='http://mpedgar.github.io/homework/index.html'>Maggie Edgar</a></li>
+		<li><a href='http://skyerickson.github.io/homework/index.html'>Sky Erickson</a></li>
+		<li><a href='http://elharris.github.io/homework/index.html'>Liz Harris</a></li>
+		<li><a href='http://laramee321.github.io/homework/index.html'>Eoin Laramee</a></li>
+		<li><a href='http://mliriano.github.io/homework/index.html'>Michelle Liriano</a></li>
+		<li><a href='http://camuscanell.github.io/homework/index.html'>Craig Muscanell</a></li>
+		<li><a href='http://jesspurdy.github.io/homework/index.html'>Jesseca Purdy</a></li>
+		<li><a href='http://nataliesocha.github.io/homework/index.html'>Natalie Socha</a></li>
+		<li><a href='http://maw11999.github.io/homework/index.html'>Morgan Wilson</a></li>
 	</ul>
 </article>
 
 
 <article class='slide slide-subhead'>
-   <h1>HTML/CSS Are Static</h1>
-   <h3>(Now only mostly true, as you can add interactivity via CSS Hover, Animation)</h3>
+   <h1>HTML/CSS are primarily static.</h1>
+   <h3>(Now only mostly true, since we have CSS hover, animations, transitions, etc.)</h3>
 </article>
 
 <article class='slide slide-list'>
@@ -203,24 +204,19 @@ function shuffleHomework(amt) {
         <li class='slide'/><h3>Sliders</h3></li>
         <li class='slide'/><h3>Drag and Drop</h3></li>
         <li class='slide'/><h3>Autocomplete</h3></li>
-        <li class='slide'/><h3>Ajax </h3></li>
+        <li class='slide'/><h3>Ajax (Asynchronous JavaScript and XML)</h3></li>
 
 </ul>
 </article>
 
 <article class='slide slide-subhead'>
  <h1>And, unless it's flash..</h1>
- <h3 class='slide'>It's programmed in Javascript<br/>"Lingua Franca" of the Web</h3>
+ <h3 class='slide'>It's programmed in Javascript</h3>
 </article>
 
 <article class='slide slide-subhead'>
- <h1>Disclaimer:</h1>
- <h2>Programming is <em>Hard</em></h2>
-</article>
-
-<article class='slide slide-subhead'>
-<h1>We'll do our best..</h1>
-<h3>But you're not going to learn it in a day. It take a lot longer than that...</h3>
+<h1>Programming is challenging.</h1>
+<h3>It takes more than a day.</h3>
 </article>
 
 <article class='slide slide-list'>
@@ -240,28 +236,6 @@ function shuffleHomework(amt) {
   </ul>
 </article>
 
-<article class='slide slide-list'>
-<h2>Javascript is both:</h2>
-   <ul>
-   	<li class='slide'>
-   		<h3>The worlds most popular language (beat Visual Basic)</h3>
-   	</li>
-   	<li class='slide'>
-   		<h3>The world's most unpopular language (people love to complain about it)</h3>
-   	</li>
-   </ul>
-</article>
-
-<article class='slide slide-list'>
-    <h2>Why so much hate for JavaScript?</h2>
-    <ul>
-      <li class='slide'/><h3>Incompatible Implementations</h3></li>
-      <li class='slide'/><h3>OO, but not a classical inheritance</h3></li>
-      <li class='slide'/><h3>Initial Implementation were slow</h3></li>
-      <li class='slide'/><h3>It looked like a silly toy next to Flash</h3></li>
-      <li class='slide'/><h3>No AJAX to start with (while Flash did)</h3></li>
-    </ul>
-</article>
 
 <article class='slide slide-list'>
   <h2>What Changed?</h2>
@@ -269,7 +243,7 @@ function shuffleHomework(amt) {
     <li class='slide'/><h3>The "Gmail" and "Goole Maps Era" (2004-2005)</h3><a href="http://maps.google.com/">Google Maps</a></li>
     <li class='slide'/><h3>"Framework Era" (2005-Today) <a href='http://jquery.com/'>jQuery</a></h3></li>
     <li class='slide'/><h3><a href='http://news.cnet.com/8301-1001_3-10030888-92.html'>"Chrome Era" (2008-Today)</a></h3></li>
-	<li class='slide'/><h3>The "javascript MVC era" (2010-Today) <a href="http://alpha.salon.io/#/home">salon.io</a></h3></li>
+	<li class='slide'/><h3>The "javascript MVC (Model-View-Controller) era" (2010-Today) <a href="http://alpha.salon.io/#/home">salon.io</a></h3></li>
   </ul>
 </article>
 
@@ -323,13 +297,16 @@ document.write("Let's write some HTML right here!");
 <h2>3 Main Goals for today</h2>
 <ol>
 	<li class="slide">
-		<h3>Be able to read and understand some JavaScript</h3>
+		<h3>Be able to read a tiny bit of JavaScript</h3>
 	</li>
 	<li class="slide">
 		<h3>Be able to manipulate documents with jQuery</h3>
 	</li>
 	<li class="slide">
 		<h3>Be able to use jQuery plugins</h3>
+	</li>
+	<li class="slide">
+		<h3>Copy + Paste is your friend.</h3>
 	</li>
 </ol>
 </article>
@@ -338,16 +315,16 @@ document.write("Let's write some HTML right here!");
  <h2>What is jQuery?</h2>
  <ul>
  	<li class="slide">
- 		<h3>Most of what we do in Javscript is manipulate the DOM and Ajax</h3>
+ 		<h3>Most of what we do in Javscript is manipulate the DOM (Document Object Model) and Ajax</h3>
  	</li>
  	<li class="slide">
  		<h3>These are very long and cumbersome to do in straight javscript</h3>
  	</li>
  	<li class="slide">
-                <h3>On top of this, different browsers have different behavior</h3>
+        <h3>On top of this, different browsers have different behaviors</h3>
  	</li>
  	<li class="slide">
-                <h3>jQuery is a library that makes this easy and clean and <em>consistent</em></h3>
+        <h3>jQuery is a library that makes this easy, clean, and <em>consistent</em></h3>
  	</li>
  	<li class="slide">
  		<h3>Works with CSS selectors </h3>
@@ -373,8 +350,8 @@ document.write("Let's write some HTML right here!");
 
 
 <article class='slide slide-subhead'>
-<h1>Docs are your Friend</h1>
-<h2>Get comfortable with <a href='http://docs.jquery.com'>docs.jquery.com</a></h2>
+<h1>Docs are your friend.</h1>
+<h2>Have them on hand. <a href='http://docs.jquery.com'>docs.jquery.com</a></h2>
 </article>
 
 <article class='slide slide-list'>
@@ -460,7 +437,7 @@ document.write("Let's write some HTML right here!");
 
 <article class='slide slide-list'>
 <h2>Click Drop-Down</h2>
-<p><a href="http://docs.jquery.com/UI/Accordion">jQuery Accordian</a></p>
+<p><a href="http://docs.jquery.com/UI/Accordion">jQuery Accordion</a></p>
 	
 <textarea class='coder-editor coder-editor-full'>
 <!DOCTYPE html>
@@ -471,9 +448,10 @@ document.write("Let's write some HTML right here!");
   
   <script>
   $(document).ready(function() {
-    $("#accordion").accordion();
-	$( ".selector" ).accordion({ collapsible: true });
-  });
+    $( "#accordion" ).accordion({
+	      collapsible: true
+	    });
+	  });
   </script>
 </head>
 <body>
@@ -802,7 +780,7 @@ header h1 {
 
 
 <article class='slide slide-statement'>
-	<h1><a href="http://twitter.com/about/resources/widgets">Pulling Your Twitter Feed</a></h1>
+	<h1><a href="https://www.youtube.com/watch?v=6Oq5AYKFuTI">Bro dude explains twitter widget</a></h1>
 </article>
 
 <article class='slide slide-list'>
@@ -820,7 +798,7 @@ header h1 {
 </textarea>
 </article>
 
-
+<!--
 <article class='slide slide-subhead'>
 <h1>Forms</h1>
 <h2>a basic contact form</h2>
@@ -885,6 +863,8 @@ if($_REQUEST['contact']) {
 </pre>
 </article>
 
+-->
+
 <article class='slide slide-subhead'>
 <h1><a href="http://tympanus.net/Development/3DGallery/">3D Gallery with CSS &amp; jQuery</a></h2>
 </article>
@@ -898,9 +878,8 @@ if($_REQUEST['contact']) {
 </article>
 
 
-<article class='slide slide-subhead'>
-<h1>Useful Tricks
-<h3>
+<article class='slide slide-list'>
+<h2>Useful Tricks</h2>
 	<ul>
 		<li><a href="http://css-tricks.com/keep-margins-out-of-link-lists/">Keep Margins out of Link Lists</a></li>
 		<li><a href="http://css-tricks.com/perfect-full-page-background-image/">Perfect Full Page Background Image</a></li>
@@ -922,7 +901,7 @@ if($_REQUEST['contact']) {
 
 		<h3 class='slide'>Coding</h3>
 		<ul class='slide'>	
-			<li><h3>Go through both the beginner and intermediate courses on codecademy</h3>                   
+			<li><h3>Check out the Codecademy courses about JavaScript and JQuery</h3>                   
 			<li><h3><a href='http://www.codecademy.com/courses/programming-intro'>Beginning Programming</a></h3></li> 
             <li><h3><a href='http://www.codecademy.com/courses/jquery-and-the-dom'>jQuery and the DOM</a> </h3></li>
             <li><h3><a href='http://www.codecademy.com/courses/functions_in_javascript'>Functions in Javascript</a></h3></li>
@@ -931,11 +910,11 @@ if($_REQUEST['contact']) {
 		<h3 class='slide'>Design</h3>
 	       <ul class='slide'>
 				<li>
-	                <h3>Finish Your Homework Assignments- update your homework sheets
+	                <h3>Work on final project: you should have your HTML for 3 pages written and you should begin work on your CSS. This will take time, testing, and a lot of back-and-forth.
 	 			    </h3>
 				</li>
 				<li>
-		           <h3>2 Weeks left to work on your final project!! 
+		           <h3>If you haven't done all the exercises... 
 		 		   </h3>
 				</li>
 			</ul>
